--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.jpg" alt="Luxe Ride Chauffeur Logo">
+           <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo">
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
