--- a/service.html
+++ b/service.html
@@ -128,7 +128,7 @@ footer p {
     <header>
         <nav>
             <div class="logo">
-                <img src="logo.jpg" alt="Luxe Ride Chauffeur Logo">
+                <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
