--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@ footer .social-links li a:hover {
 
             </div>
             <ul class="nav-links">
-                <li><a href="service.php">Services</a></li>
-                <li><a href="about.php">About Us</a></li>
+                <li><a href="service.html">Services</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
@@ -266,8 +266,6 @@ footer .social-links li a:hover {
         <div class="hero-content">
             <h2>Ride in Luxury, Arrive in Style</h2>
             <p>Experience premium chauffeur services tailored to your needs.</p>
-            <a href="register.php" class="cta-button">Register Here</a>
-            <a href="login.php" class="cta-button">Login</a>
         </div>
     </section>
 
