--- a/about.html
+++ b/about.html
@@ -148,7 +148,12 @@
 <body>
     <header>
         <div class="logo">
-           <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo">
+           <header>
+    <div class="logo">
+        <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo" style="max-width: 120px; height: auto;">
+    </div>
+</header>
+
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
