--- a/index.html
+++ b/index.html
@@ -251,7 +251,12 @@ footer .social-links li a:hover {
     <header>
         <nav>
             <div class="logo">
-                <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo">
+            <header>
+    <div class="logo">
+        <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo" style="max-width: 120px; height: auto;">
+    </div>
+</header>
+
 
             </div>
             <ul class="nav-links">
