--- a/service.html
+++ b/service.html
@@ -128,7 +128,12 @@ footer p {
     <header>
         <nav>
             <div class="logo">
-                <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo">
+                <header>
+    <div class="logo">
+        <img src="https://github.com/luxerides/luxerides.github.io/raw/main/images/logo.jpg" alt="Luxe Ride Chauffeur Logo" style="max-width: 120px; height: auto;">
+    </div>
+</header>
+
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
