--- a/service.html
+++ b/service.html
@@ -115,7 +115,49 @@ footer p {
     font-size: 1rem;
     color: #fff;
 }
+ @media screen and (max-width: 768px) {
+            /* Stack navigation links vertically */
+            header .nav-links {
+                flex-direction: column;
+                gap: 1rem;
+                align-items: center;
+                margin-top: 1rem;
+            }
 
+            /* Make the logo smaller */
+            header .logo img {
+                max-width: 100px;
+            }
+
+            /* About section adjustments */
+            .about-container {
+                padding: 1.5rem;
+                margin: 2rem 1rem;
+            }
+
+            .about-container h2 {
+                font-size: 2rem;
+            }
+
+            .about-container p {
+                font-size: 1rem;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            /* Further adjust text sizes and layout on very small screens */
+            .about-container h2 {
+                font-size: 1.8rem;
+            }
+
+            .about-container p {
+                font-size: 0.9rem;
+            }
+
+            footer p {
+                font-size: 0.8rem;
+            }
+        }
 </style>
 </head>
 <body>
